syntax = "proto3";
package uptick.cw721.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ibc/core/client/v1/client.proto";

option go_package = "github.com/UptickNetwork/wasm-nft-convert/cw721/types";

// Msg defines the cw721 Msg service.
service Msg {
  // ConvertNFT mints a CW721 representation of the native Cosmos nft
  // that is registered on the token mapping.
  rpc ConvertNFT(MsgConvertNFT) returns (MsgConvertNFTResponse) {
    option (google.api.http).get = "/uptick/cw721/v1/tx/convert_nft";
  }
  // ConvertCW721 mints a native Cosmos coin representation of the CW721 token
  // contract that is registered on the token mapping.
  rpc ConvertCW721(MsgConvertCW721) returns (MsgConvertCW721Response) {
    option (google.api.http).get = "/uptick/cw721/v1/tx/convert_cw721";
  }

  // TransferCW721 defines a method to transfer CW721 tokens between chains via IBC
  rpc TransferCW721(MsgTransferCW721) returns (MsgTransferCW721Response) {
    option (google.api.http).get = "/uptick/cw721/v1/tx/ibc-transfer-cw721";
  }
}

// MsgConvertNFT defines a Msg to convert a native Cosmos nft to a CW721 token
message MsgConvertNFT {
  // nft classID to cnvert to CW721
  string class_id = 1;
  // nftID to cnvert to CW721
  repeated string nft_ids = 2;
  // recipient hex address to receive CW721 token
  string receiver = 3;
  // cosmos bech32 address from the owner of the given Cosmos coins
  string sender = 4;
  // CW721 token contract address registered in a token pair
  string contract_address = 5;
  // CW721 token id registered in a token pair
  repeated string token_ids = 6;
}

// MsgConvertNFTResponse returns no fields
message MsgConvertNFTResponse {}

// MsgConvertCW721 defines a Msg to convert a CW721 token to a native Cosmos
// nft.
message MsgConvertCW721 {
  // CW721 token contract address registered in a token pair
  string contract_address = 1;
  // tokenID to convert
  repeated string token_ids = 2;
  // bech32 address to receive native Cosmos coins
  string receiver = 3;
  // sender hex address from the owner of the given CW721 tokens
  string sender = 4;
  // nft classID to cnvert to CW721
  string class_id = 5;
  // nftID to cnvert to CW721
  repeated string nft_ids = 6;
}

// MsgConvertCW721Response returns no fields
message MsgConvertCW721Response {
  // CW721 token contract address registered in a token pair
  string contract_address = 1;
  // tokenID to convert
  repeated string token_ids = 2;
  // bech32 address to receive native Cosmos coins
  string receiver = 3;
  // sender hex address from the owner of the given CW721 tokens
  string sender = 4;
  // nft classID to cnvert to CW721
  string class_id = 5;
  // nftID to cnvert to CW721
  repeated string nft_ids = 6;
}

// MsgConvertCW721Response returns no fields
message MsgConvertC721Response {}

// MsgTransferCW721 defines a message to transfer CW721 tokens between chains via IBC
// It contains information about the source and destination of the transfer,
// token identifiers, timeout parameters and optional memo
message MsgTransferCW721 {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string cw_contract_address = 1;
  // tokenID to convert
  repeated string cw_token_ids = 2;

  // the port on which the packet will be sent
  string source_port = 3;
  // the channel by which the packet will be sent
  string source_channel = 4;
  // the class_id of tokens to be transferred
  string class_id = 5;
  // the non fungible tokens to be transferred
  repeated string cosmos_token_ids = 6;
  // the sender address
  string cw_sender = 7;
  // the recipient address on the destination chain
  string cosmos_receiver = 8;
  // Timeout height relative to the current block height.
  // The timeout is disabled when set to 0.
  ibc.core.client.v1.Height timeout_height = 9 [(gogoproto.nullable) = false];
  // Timeout timestamp in absolute nanoseconds since unix epoch.
  // The timeout is disabled when set to 0.
  uint64 timeout_timestamp = 10;
  // optional memo
  string memo = 11;
}

// MsgTransferCW721Response defines the response type for TransferCW721 RPC
message MsgTransferCW721Response {}
