syntax = "proto3";
package uptick.erc721.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/UptickNetwork/uptick/x/erc721/types";

// Msg defines the erc721 Msg service.
service Msg {
  // ConvertNFT mints a ERC721 representation of the native Cosmos nft
  // that is registered on the token mapping.
  rpc ConvertNFT(MsgConvertNFT) returns (MsgConvertNFTResponse) {
    option (google.api.http).get = "/uptick/erc721/v1/tx/convert_nft";
  };
  // ConvertERC721 mints a native Cosmos coin representation of the ERC721 token
  // contract that is registered on the token mapping.
  rpc ConvertERC721(MsgConvertERC721) returns (MsgConvertERC721Response) {
    option (google.api.http).get = "/uptick/erc721/v1/tx/convert_erc721";
  };
}

// MsgConvertNFT defines a Msg to convert a native Cosmos nft to a ERC721 token
message MsgConvertNFT {
  // nft classID to cnvert to ERC721
  string class_id = 1;
  // nftID to cnvert to ERC721
  string nft_id = 2;
  // recipient hex address to receive ERC721 token
  string receiver = 3;
  // cosmos bech32 address from the owner of the given Cosmos coins
  string sender = 4;
  // ERC721 token contract address registered in a token pair
  string contract_address = 5;
  // ERC721 token id registered in a token pair
  string token_id = 6;
}

// MsgConvertNFTResponse returns no fields
message MsgConvertNFTResponse {}

// MsgConvertERC721 defines a Msg to convert a ERC721 token to a native Cosmos
// nft.
message MsgConvertERC721 {
  // ERC721 token contract address registered in a token pair
  string contract_address = 1;
  // tokenID to convert
  string token_id = 2;
  // bech32 address to receive native Cosmos coins
  string receiver = 3;
  // sender hex address from the owner of the given ERC721 tokens
  string sender = 4;
  // nft classID to cnvert to ERC721
  string class_id = 5;
  // nftID to cnvert to ERC721
  string nft_id = 6;
}

// MsgConvertERC721Response returns no fields
message MsgConvertERC721Response {}
